# safe_robot_navigation_with_tiago

./: README.md  requirements.txt
crowd_navigation/: CMakeLists.txt  package.xml
crowd_navigation_core/: CMakeLists.txt  package.xml
crowd_navigation_core/launch/: crowd_navigation_core.launch  crowd_prediction.launch  debug_tool.launch  motion_generation.launch
crowd_navigation_core/scripts/: crowd_prediction  debug_tool  motion_generation
crowd_navigation_core/src/crowd_navigation_core/: CrowdPrediction.py  DebugTool.py  FASMachine.py  MotionGeneration.py  utils.py
crowd_navigation_gazebo/: CMakeLists.txt  package.xml
crowd_navigation_gazebo/launch/: tiago_gazebo.launch
crowd_navigation_msgs/: CMakeLists.txt  package.xml
