<?xml version="1.0"?>
<package format="2">
  <name>crowd_navigation</name>
  <version>0.0.0</version>
  <description>The crowd_navigation package</description>
  <maintainer email="cipriano@diag.uniroma1.it">Michele Cipriano</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>crowd_navigation_core</exec_depend>
  <exec_depend>crowd_navigation_gazebo</exec_depend>
  <exec_depend>crowd_navigation_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <metapackage/>
  </export>
</package>