<?xml version="1.0"?>
<package format="2">
  <name>crowd_navigation_gazebo</name>
  <version>0.0.0</version>
  <description>The crowd_navigation_gazebo package</description>
  <maintainer email="cipriano@diag.uniroma1.it">Michele Cipriano</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
